--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Assemblage
 Title: Assemblage Regression
-Version: 1.0.0
+Version: 1.0.1
 Maintainer: PGC <goulet_coulombe.philippe@uqam.ca> & CB
     <christophebarrette@gmail.com>
 Description: The concept of assemblage originates from the research paper
@@ -17,8 +17,14 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports: 
+    base,
     CVXR,
+    datasets,
     doParallel,
     foreach,
     glmnet,
-    pracma
+    iterators,
+    Matrix,
+    methods,
+    pracma,
+    stats
